@@ -164,11 +164,11 @@ public class Storage
 				return SKIPWALK;
 			try
 			{
-				logger.debug("Reading vertices from "+current.topDir+File.separator+current.file+"v");
+				logger.debug("Reading vertices from "+oemm.topDir+File.separator+current.file+"v");
 				Vertex [] vert = new Vertex[current.vn];
 				double [] xyz = new double[3];
-				FileChannel fc = new FileInputStream(new File(current.topDir, current.file+"v")).getChannel();
-				DataInputStream bufIn = new DataInputStream(new BufferedInputStream(new FileInputStream(new File(current.topDir, current.file+"a"))));
+				FileChannel fc = new FileInputStream(new File(oemm.topDir, current.file+"v")).getChannel();
+				DataInputStream bufIn = new DataInputStream(new BufferedInputStream(new FileInputStream(new File(oemm.topDir, current.file+"a"))));
 				bb.clear();
 				DoubleBuffer bbD = bb.asDoubleBuffer();
 				int remaining = current.vn;
@@ -212,7 +212,7 @@ public class Storage
 			}
 			catch (IOException ex)
 			{
-				logger.error("I/O error when reading file "+current.topDir+File.separator+current.file+"i");
+				logger.error("I/O error when reading file "+oemm.topDir+File.separator+current.file+"i");
 				ex.printStackTrace();
 				throw new RuntimeException(ex);
 			}
@@ -237,8 +237,8 @@ public class Storage
 				return SKIPWALK;
 			try
 			{
-				logger.debug("Reading triangles from "+current.topDir+File.separator+current.file+"t");
-				FileChannel fc = new FileInputStream(new File(current.topDir, current.file+"t")).getChannel();
+				logger.debug("Reading triangles from "+oemm.topDir+File.separator+current.file+"t");
+				FileChannel fc = new FileInputStream(new File(oemm.topDir, current.file+"t")).getChannel();
 				Vertex [] vert = new Vertex[3];
 				int [] leaf = new int[3];
 				int [] pointIndex = new int[3];
@@ -292,7 +292,7 @@ public class Storage
 			}
 			catch (IOException ex)
 			{
-				logger.error("I/O error when reading indexed file "+current.topDir+File.separator+current.file+"t");
+				logger.error("I/O error when reading indexed file "+oemm.topDir+File.separator+current.file+"t");
 				ex.printStackTrace();
 				throw new RuntimeException(ex);
 			}
